// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display custom seperator  1`] = `
<DocumentFragment>
  .emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  -webkit-transition: all 0.15s ease-out;
  transition: all 0.15s ease-out;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.emotion-2:focus {
  box-shadow: 0 0 0 3px rgba(66, 153, 225, 0.6);
}

.emotion-2:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-2:disabled,
.emotion-2:disabled:focus,
.emotion-2:disabled:hover,
.emotion-2[aria-disabled=true],
.emotion-2[aria-disabled=true]:focus,
.emotion-2[aria-disabled=true]:hover {
  opacity: 0.4;
  cursor: not-allowed;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4 {
  margin-left: 0.5rem;
  margin-right: 0.5rem;
}

<nav
    aria-label="breadcrumb"
    class="emotion-0"
    data-chakra-component="CBreadcrumb"
  >
    <ol>
      <li
        class="emotion-1"
        data-chakra-component="CBreadcrumbItem"
      >
        <a
          class="emotion-2 emotion-0"
          data-chakra-component="CBreadcrumbLink"
          href="/"
        >
          Home
        </a>
        <span
          class="emotion-4"
          data-chakra-component="CBreadcrumbSeparator"
          role="presentation"
        >
          -
        </span>
      </li>
      <li
        class="emotion-1"
        data-chakra-component="CBreadcrumbItem"
      >
        <a
          class="emotion-2 emotion-0"
          data-chakra-component="CBreadcrumbLink"
          href="/about"
        >
          About
        </a>
        <span
          class="emotion-4"
          data-chakra-component="CBreadcrumbSeparator"
          role="presentation"
        >
          -
        </span>
      </li>
      <li
        class="emotion-1"
        data-chakra-component="CBreadcrumbItem"
      >
        <span
          aria-current="page"
          class="emotion-0"
          data-chakra-component="CBreadcrumbLink"
          href="/contact"
        >
          Contact
        </span>
      </li>
    </ol>
  </nav>
</DocumentFragment>
`;

exports[`should render correctly 1`] = `
<DocumentFragment>
  .emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  -webkit-transition: all 0.15s ease-out;
  transition: all 0.15s ease-out;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.emotion-2:focus {
  box-shadow: 0 0 0 3px rgba(66, 153, 225, 0.6);
}

.emotion-2:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-2:disabled,
.emotion-2:disabled:focus,
.emotion-2:disabled:hover,
.emotion-2[aria-disabled=true],
.emotion-2[aria-disabled=true]:focus,
.emotion-2[aria-disabled=true]:hover {
  opacity: 0.4;
  cursor: not-allowed;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4 {
  margin-left: 0.5rem;
  margin-right: 0.5rem;
  color: tomato;
  font-size: 10px;
  font-weight: 700;
}

.emotion-8 {
  margin-left: 0.5rem;
  margin-right: 0.5rem;
  color: firebrick;
  font-size: 20px;
  font-weight: 700;
}

<div>
    <nav
      aria-label="breadcrumb"
      class="emotion-0"
      data-chakra-component="CBreadcrumb"
    >
      <ol>
        <li
          class="emotion-1"
          data-chakra-component="CBreadcrumbItem"
        >
          <a
            class="emotion-2 emotion-0"
            data-chakra-component="CBreadcrumbLink"
            href="#"
          >
            Breadcrumb 1
          </a>
          <span
            class="emotion-4"
            data-chakra-component="CBreadcrumbSeparator"
            role="presentation"
          >
            /
          </span>
        </li>
        <li
          class="emotion-1"
          data-chakra-component="CBreadcrumbItem"
        >
          <a
            class="emotion-2 emotion-0"
            data-chakra-component="CBreadcrumbLink"
            href="#"
          >
            Breadcrumb 2
          </a>
          <span
            class="emotion-8"
            data-chakra-component="CBreadcrumbSeparator"
            role="presentation"
          >
            /
          </span>
        </li>
      </ol>
    </nav>
  </div>
</DocumentFragment>
`;
